fix: align feature card call to action to the bottom

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -346,6 +346,7 @@ $gradients: (
 
   .body-md {
     margin-top: 1rem;
+    flex-grow: 1;
 
     @include media(xl) {
       margin-top: 1.5rem;
